--- a/client/src/components/form/form.css
+++ b/client/src/components/form/form.css
@@ -1,8 +1,37 @@
 .form {
-  border: 1px solid black;
+  padding: 3rem 0 2rem 0;
+  text-align: center;
 }
 
 .form input {
   display: flex;
   flex-direction: column;
+  margin: 1rem 0;
+  padding: 10px 20px;
+  border-radius: 30px;
+  border: none;
+}
+
+.form input:focus {
+  outline: none;
+  box-shadow: 0 0 10px #ccc;
+}
+
+.form h2 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.form-btn {
+  border: none;
+  padding: 5px 20px;
+  border-radius: 30px;
+  border: 1px solid white;
+  transition: 0.5s ease;
+}
+
+.form-btn:hover {
+  background-color: transparent;
+  color: white;
+  transition: 0.5s ease;
 }
